add header containers and font

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <p>lets do it</p> 
+   <div class="header">
+    <div class="logo">Header logo</div>
+    <div class="link">header link one</div>
+    <div class="link">header link two</div>
+    <div class="link">header link three</div>
+</div> 
 </body>
 </html>
