change links to actual links and add style

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="hero">
    <div class="header">
     <div class="logo">Header logo</div>
-    <div class="link">header link one</div>
-    <div class="link">header link two</div>
-    <div class="link">header link three</div>
-</div> 
+    <div class="link">
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+   </div> 
+</div>
 </body>
 </html>
