--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
 
   <div class="hero">
    <div class="header">
-    <div class="logo">Header logo</div>
+    <div class="logo">Header Logo</div>
     <div class="link">
         <ul>
             <li>header link one</li>
             <li>header link two</li>
             <li>header link three</li>
         </ul>
-   </div> 
+    </div> 
 </div>
+        <div class="hero-main">
+            <div class="heading-main">This website is awesome</div>
+            <div class="text-main">This website has some subtext that goes
+                here under the main title. It's a smaller font and the color
+                is lower contrast </div>
+            <button>Sign up</button>
+        </div> 
+    </div>
 </body>
 </html>
