add right side container and style button

--- a/index.html
+++ b/index.html
@@ -20,11 +20,14 @@
     </div> 
 </div>
         <div class="hero-main">
+            <div class="left-main">
             <div class="heading-main">This website is awesome</div>
             <div class="text-main">This website has some subtext that goes
                 here under the main title. It's a smaller font and the color
                 is lower contrast </div>
             <button>Sign up</button>
+        </div>
+        <div class="right-main"></div>
         </div> 
     </div>
 </body>
