adjust spacing on the bottom part

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 is lower contrast </div>
             <button>Sign up</button>
         </div>
-        <div class="right-main"></div>
+        <div class="right-main">this is a placeholder for an image</div>
         </div> 
     </div>
 </body>
