add divs for second 1/4

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="hero">
+<div class="hero">
    <div class="header">
     <div class="logo">Header Logo</div>
     <div class="link">
@@ -30,5 +29,11 @@
         <div class="right-main">this is a placeholder for an image</div>
         </div> 
     </div>
+<div class="information">
+        <div class="info-header"> Some random information</div>
+        <div class="info-boxes"></div>
+        <div class="box"></div>
+        <div class="box-text">this is some subtext under an illustration or an image</div>
+</div>
 </body>
 </html>
