customise the box

--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
         </div> 
     </div>
 <div class="information">
-        <div class="info-header"> Some random information</div>
-        <div class="info-boxes"></div>
+ <div class="info-header"> Some random information</div>
+    <div class="info-boxes">
         <div class="box"></div>
-        <div class="box-text">this is some subtext under an illustration or an image</div>
+            <div class="box-text">this is some subtext under an illustration or an image</div>
+    </div>
 </div>
 </body>
 </html>
