--- a/index.html
+++ b/index.html
@@ -32,9 +32,23 @@
 <div class="information">
  <div class="info-header"> Some random information</div>
     <div class="info-boxes">
+        <div class="box-container">
         <div class="box"></div>
             <div class="box-text">this is some subtext under an illustration or an image</div>
-    </div>
-</div>
+        </div>
+        <div class="box-container">
+            <div class="box"></div>
+            <div class="box-text">this is some subtext under an illustration or an image</div>
+        </div>
+        <div class="box-container">
+            <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or an image</div>
+        </div>
+        <div class="box-container">
+            <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration or an image</div>
+        </div>
+        </div>
+        </div>        
 </body>
 </html>
