--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div> 
     </div>
 <div class="information">
- <div class="info-header"> Some random information</div>
+ <div class="info-header"> Some random information.</div>
     <div class="info-boxes">
         <div class="box-container">
         <div class="box"></div>
