--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <div class="info-boxes">
         <div class="box-container">
         <div class="box"></div>
-            <div class="box-text">this is some subtext under an illustration or an image</div>
+            <div class="box-text">this is some subtext under an illustration <div class="br">or image</div></div>
         </div>
         <div class="box-container">
             <div class="box"></div>
-            <div class="box-text">this is some subtext under an illustration or an image</div>
+            <div class="box-text">this is some subtext under an illustration <div class="br">or image</div></div>
         </div>
         <div class="box-container">
             <div class="box"></div>
-                <div class="box-text">this is some subtext under an illustration or an image</div>
+                <div class="box-text">this is some subtext under an illustration <div class="br">or image</div></div>
         </div>
         <div class="box-container">
             <div class="box"></div>
-                <div class="box-text">this is some subtext under an illustration or an image</div>
+                <div class="box-text">this is some subtext under an illustration <div class="br">or image</div></div>
         </div>
         </div>
         </div>        
