add html divs for qoute section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                 <div class="box-text">this is some subtext under an illustration <div class="br">or image</div></div>
         </div>
         </div>
-        </div>        
+        </div>
+    <div class="Qoute">
+       <div class="qoute-box">This is an inspiring qoute, or a testimonial from a customer.
+        Maybe it's just filling up space, or maybe people actually read it. Who knows? All 
+        I know is that it looks nice.
+        <div class="sign-box">-Thor, God of Thunder</div>
+       </div> 
+    </div>        
 </body>
 </html>
