--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         </div>
         </div>
-    <div class="Qoute">
+    <div class="qoute">
        <div class="qoute-box">This is an inspiring qoute, or a testimonial from a customer.
         Maybe it's just filling up space, or maybe people actually read it. Who knows? All 
         I know is that it looks nice.
