--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
         I know is that it looks nice.
         <div class="sign-box">-Thor, God of Thunder</div>
        </div> 
+    </div>
+    <div class="call">
+        <div class="call-box">
+            <div class="call-header">Call to action! It's time!</div>
+            <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+            <button class="call-button"> Sign up</button>
+        </div>
     </div>        
 </body>
 </html>
