--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
     </div>
     <div class="call">
         <div class="call-box">
+        <div class="call-left">
             <div class="call-header">Call to action! It's time!</div>
             <div class="call-text">Sign up for our product by clicking that button right over there!</div>
+        </div>
             <button class="call-button"> Sign up</button>
         </div>
     </div>        
