--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         </div>
             <button class="call-button"> Sign up</button>
         </div>
+    </div>
+    <div class="footer">
+        <div class="footer-text">Copyright &copy; The Odin Project 2021</div>
     </div>        
 </body>
 </html>
